# trading-results-api

./: .test.env  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 2024_10_18_1258-5b2b98853fc2_initial.py
src/: app.py  parser.py
src/data_access/: trading_results.py
src/database/: db.py
src/filters/: dynamics.py  trading_results.py
src/models/: __init__.py  base.py  trading_results.py
src/repository/: trading_results.py
src/routers/: trading_results.py
src/settings/: config.py
src/utils/: cache.py  custom_types.py  exceptions.py
tests/: conftest.py
tests/fixtures/: __init__.py  test_cases.py
tests/fixtures/postgres/: trading_results.py
tests/integration/: test_trading_results.py
